--- a/configure.in
+++ b/configure.in
@@ -200,6 +200,8 @@ libwpd-0.8.pc
 libwpd-stream-0.8.pc
 libwpd.spec
 libwpd-zip
+autopackage/Makefile
+autopackage/default.apspec
 ])
 
 case "$debug" in
