--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -40,6 +40,7 @@ libwpd_0_8_la_SOURCES =				\
 	libwpd_internal.cpp			\
 	libwpd_math.cpp				\
 	WP3AttributeGroup.cpp			\
+	WP3DefinitionGroup.cpp			\
 	WP3EndOfLinePageGroup.cpp		\
 	WP3ExtendedCharacterGroup.cpp		\
 	WP3FileStructure.cpp			\
@@ -47,12 +48,12 @@ libwpd_0_8_la_SOURCES =				\
 	WP3FontGroup.cpp			\
 	WP3Header.cpp				\
 	WP3Listener.cpp				\
-	WP3StylesListener.cpp			\
 	WP3MiscellaneousGroup.cpp		\
 	WP3PageFormatGroup.cpp			\
 	WP3Parser.cpp				\
 	WP3Part.cpp				\
 	WP3SingleByteFunction.cpp		\
+	WP3StylesListener.cpp			\
 	WP3TablesGroup.cpp			\
 	WP3UndoGroup.cpp			\
 	WP3UnsupportedFixedLengthGroup.cpp 	\
@@ -61,9 +62,9 @@ libwpd_0_8_la_SOURCES =				\
 	WP42FileStructure.cpp			\
 	WP42Heuristics.cpp			\
 	WP42Listener.cpp			\
-	WP42StylesListener.cpp			\
 	WP42Parser.cpp				\
 	WP42Part.cpp				\
+	WP42StylesListener.cpp			\
 	WP42UnsupportedVariableLengthGroup.cpp	\
 	WP42VariableLengthGroup.cpp		\
 	WP5AttributeGroup.cpp 			\
@@ -73,12 +74,12 @@ libwpd_0_8_la_SOURCES =				\
 	WP5FixedLengthGroup.cpp			\
 	WP5FormatGroup.cpp			\
 	WP5Header.cpp				\
-	WP5Listener.cpp			\
-	WP5StylesListener.cpp			\
+	WP5Listener.cpp				\
 	WP5PageFormatGroup.cpp			\
 	WP5Parser.cpp				\
 	WP5Part.cpp				\
 	WP5SingleByteFunction.cpp		\
+	WP5StylesListener.cpp			\
 	WP5TableEOLGroup.cpp			\
 	WP5TableEOPGroup.cpp			\
 	WP5UnsupportedFixedLengthGroup.cpp	\
@@ -87,6 +88,7 @@ libwpd_0_8_la_SOURCES =				\
 	WP6AttributeGroup.cpp 			\
 	WP6CharacterGroup.cpp			\
 	WP6ColumnGroup.cpp			\
+	WP6ContentListener.cpp			\
 	WP6DefaultInitialFontPacket.cpp		\
 	WP6DisplayNumberReferenceGroup.cpp 	\
 	WP6EOLGroup.cpp				\
@@ -103,9 +105,7 @@ libwpd_0_8_la_SOURCES =				\
 	WP61Header.cpp				\
 	WP6HeaderFooterGroup.cpp 		\
 	WP6HighlightGroup.cpp			\
-	WP6ContentListener.cpp			\
 	WP6Listener.cpp				\
-	WP6StylesListener.cpp			\
 	WP6Parser.cpp				\
 	WP6OutlineStylePacket.cpp		\
 	WP6PageGroup.cpp			\
@@ -116,6 +116,7 @@ libwpd_0_8_la_SOURCES =				\
 	WP6PrefixDataPacket.cpp			\
 	WP6SingleByteFunction.cpp		\
 	WP6StyleGroup.cpp			\
+	WP6StylesListener.cpp			\
 	WP6TabGroup.cpp 			\
 	WP6UndoGroup.cpp			\
 	WP6UnsupportedFixedLengthGroup.cpp 	\
@@ -138,6 +139,7 @@ libwpd_0_8_la_SOURCES =				\
 	libwpd_math.h				\
 	libwpd_types.h				\
 	WP3AttributeGroup.h			\
+	WP3DefinitionGroup.h			\
 	WP3EndOfLinePageGroup.h			\
 	WP3ExtendedCharacterGroup.h		\
 	WP3FileStructure.h			\
@@ -145,12 +147,12 @@ libwpd_0_8_la_SOURCES =				\
 	WP3FontGroup.h				\
 	WP3Header.h				\
 	WP3Listener.h				\
-	WP3StylesListener.h			\
 	WP3MiscellaneousGroup.h			\
 	WP3PageFormatGroup.h			\
 	WP3Parser.h				\
 	WP3Part.h				\
 	WP3SingleByteFunction.h			\
+	WP3StylesListener.h			\
 	WP3TablesGroup.h			\
 	WP3UndoGroup.h				\
 	WP3UnsupportedFixedLengthGroup.h 	\
@@ -159,9 +161,9 @@ libwpd_0_8_la_SOURCES =				\
 	WP42FileStructure.h			\
 	WP42Heuristics.h			\
 	WP42Listener.h				\
-	WP42StylesListener.h			\
 	WP42Part.h				\
 	WP42Parser.h				\
+	WP42StylesListener.h			\
 	WP42UnsupportedVariableLengthGroup.h	\
 	WP42VariableLengthGroup.h		\
 	WP5AttributeGroup.h 			\
@@ -172,11 +174,11 @@ libwpd_0_8_la_SOURCES =				\
 	WP5FormatGroup.h			\
 	WP5Header.h				\
 	WP5Listener.h				\
-	WP5StylesListener.h			\
 	WP5PageFormatGroup.h			\
 	WP5Part.h				\
 	WP5Parser.h				\
 	WP5SingleByteFunction.h			\
+	WP5StylesListener.h			\
 	WP5TableEOLGroup.h			\
 	WP5TableEOPGroup.h			\
 	WP5UnsupportedFixedLengthGroup.h	\
@@ -186,6 +188,7 @@ libwpd_0_8_la_SOURCES =				\
 	WP6AttributeGroup.h 			\
 	WP6CharacterGroup.h			\
 	WP6ColumnGroup.h			\
+	WP6ContentListener.h			\
 	WP6DefaultInitialFontPacket.h		\
 	WP6DisplayNumberReferenceGroup.h	\
 	WP6EOLGroup.h				\
@@ -201,9 +204,7 @@ libwpd_0_8_la_SOURCES =				\
 	WP61Header.h 				\
 	WP6HeaderFooterGroup.h 			\
 	WP6HighlightGroup.h			\
-	WP6ContentListener.h			\
 	WP6Listener.h				\
-	WP6StylesListener.h			\
 	WP6OutlineStylePacket.h			\
 	WP6PageGroup.h				\
 	WP6ParagraphGroup.h			\
@@ -214,6 +215,7 @@ libwpd_0_8_la_SOURCES =				\
 	WP6PrefixDataPacket.h			\
 	WP6SingleByteFunction.h			\
 	WP6StyleGroup.h				\
+	WP6StylesListener.h			\
 	WP6TabGroup.h	 			\
 	WP6TibetanMap.h				\
 	WP6UndoGroup.h				\
@@ -223,8 +225,8 @@ libwpd_0_8_la_SOURCES =				\
 	WPXHeader.h				\
 	WPDocument.h				\
 	WPXFileStructure.h			\
-	WPXListener.h				\
 	WPXHLListenerImpl.h			\
+	WPXListener.h				\
 	WPXMemoryStream.h			\
 	WPXPageSpan.h				\
 	WPXParser.h 				\
