--- a/configure.in
+++ b/configure.in
@@ -123,6 +123,18 @@ esac
 AC_MSG_RESULT($platform_win32)
 AM_CONDITIONAL(PLATFORM_WIN32, test "$platform_win32" = yes)
 
+AC_MSG_CHECKING([for Darwin (Mac OS X) platform])
+case "$host" in
+  *-*-darwin*)
+    platform_darwin=yes
+    ;;
+  *)
+    platform_darwin=no
+    ;;
+esac
+AC_MSG_RESULT($platform_darwin)
+AM_CONDITIONAL(PLATFORM_DARWIN, test "$platform_darwin" = yes)
+
 AC_ARG_ENABLE(debug,[  --enable-debug    Turn on debugging],[
 	case "${enableval}" in
 	   yes)	debug=true ;
