--- a/libwpd.spec.in
+++ b/libwpd.spec.in
@@ -13,7 +13,7 @@ URL: http://libwpd.sf.net/
 BuildRoot: %{_tmppath}/%{name}-%{version}-buildroot
 License: LGPL
 Requires: glib2 >= 2.0.0, libgsf >= 1.6.0
-BuildRequires: glib2-devel >= 2.0.0, libgsf-devel >= 1.6.0, gcc-c++, libstdc++-devel
+BuildRequires: glib2-devel >= 2.0.0, libgsf-devel >= 1.6.0, gcc-c++, libstdc++-devel, pkgconfig >= 0.9.0
 
 %description
 Library that handles Word Perfect documents.
