Use librevenge-generators

--- a/src/conv/text/Makefile.am
+++ b/src/conv/text/Makefile.am
@@ -1,14 +1,19 @@
+if BUILD_TOOLS
+
 bin_PROGRAMS = wpd2text
 
-AM_CXXFLAGS = -I$(top_srcdir)/inc $(REVENGE_CFLAGS) $(DEBUG_CXXFLAGS)
+AM_CXXFLAGS = -I$(top_srcdir)/inc $(REVENGE_CFLAGS) $(REVENGE_GENERATORS_CFLAGS) $(DEBUG_CXXFLAGS)
 
 wpd2text_DEPENDENCIES = @WPD2TEXT_WIN32_RESOURCE@ 
 
-wpd2text_LDADD = ../../lib/libwpd-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@.la $(REVENGE_LIBS) @WPD2TEXT_WIN32_RESOURCE@
+wpd2text_LDADD = \
+	../../lib/libwpd-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@.la \
+	$(REVENGE_LIBS) \
+	$(REVENGE_GENERATORS_LIBS) \
+	$(REVENGE_STREAM_LIBS) \
+	@WPD2TEXT_WIN32_RESOURCE@
  
 wpd2text_SOURCES = \
-	TextDocumentGenerator.cpp \
-	TextDocumentGenerator.h \
 	wpd2text.cpp
 
 if OS_WIN32
@@ -27,3 +32,4 @@ EXTRA_DIST = \
 BUILD_EXTRA_DIST = \
 	wpd2text.rc	 
  
+endif
