--- a/src/conv/html/Makefile.am
+++ b/src/conv/html/Makefile.am
@@ -2,14 +2,19 @@ if BUILD_TOOLS
 
 bin_PROGRAMS = wpd2html
 
-AM_CXXFLAGS = -I$(top_srcdir)/inc $(REVENGE_CFLAGS) $(REVENGE_GENERATORS_CFLAGS) $(DEBUG_CXXFLAGS)
+AM_CXXFLAGS = \
+	-I$(top_srcdir)/inc \
+	$(REVENGE_CFLAGS) \
+	$(REVENGE_GENERATORS_CFLAGS) \
+	$(REVENGE_STREAM_CFLAGS) \
+	$(DEBUG_CXXFLAGS)
 
 wpd2html_DEPENDENCIES = @WPD2HTML_WIN32_RESOURCE@
 
 wpd2html_LDADD = \
 	../../lib/libwpd-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@.la \
-	$(REVENGE_LIBS) \
 	$(REVENGE_GENERATORS_LIBS) \
+	$(REVENGE_LIBS) \
 	$(REVENGE_STREAM_LIBS) \
 	@WPD2HTML_WIN32_RESOURCE@
 
