--- a/libwpd.pc.in
+++ b/libwpd.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: libwpd-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@
 Description: A library for reading and writing Corel WordPerfect(tm) documents
 Version: @VERSION@
-Requires: librevenge-0.0 librevenge-stream-0.0
+Requires: librevenge-0.0
 Libs: -L${libdir} -lwpd-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@
 Cflags: -I${includedir}/libwpd-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@
