No need to const_cast since librevenge 0.0.1

--- a/configure.ac
+++ b/configure.ac
@@ -205,7 +205,7 @@ AM_CONDITIONAL([WITH_LIBWPD_DOCS], [test "x$build_docs" != "xno"])
 # Find librevenge
 # ===============
 PKG_CHECK_MODULES([REVENGE],[
-	librevenge-0.0
+	librevenge-0.0 > 0.0.1
 ])
 AC_SUBST([REVENGE_CFLAGS])
 AC_SUBST([REVENGE_LIBS])
